fix: improve layout and spacing for hiring section

--- a/src/app/[locale]/for_business/forBusiness.module.css
+++ b/src/app/[locale]/for_business/forBusiness.module.css
@@ -93,6 +93,9 @@
   .marqueeContainer {
     margin: 40px auto 40px auto;
   }
+  .hiringContainer{
+    margin: 40px auto 40px auto;
+  }
   .missionContainer {
     margin: 40px auto 40px auto;
   }
