--- a/src/components/hiring/hiring.module.css
+++ b/src/components/hiring/hiring.module.css
@@ -107,7 +107,7 @@
   }
   .cards .card {
     padding: 12px 24px;
-    width: 80%;
+    width: 100%;
     height: fit-content;
     align-self: center;
     justify-self: center;
